se añadio el footer, nav, logo, se trabajo en el grid de la página

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,4 +1,13 @@
 extends ../templates/template
 
 block content
-    
+    .container
+        .row
+            .col-12
+                .title
+                    h1 Lorem, ipsum.
+                img(src="./media/constructora-community.jpeg", alt="", srcset="")
+                .subtitle
+                    h2 Lorem, ipsum dolor.
+                
+                p Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, saepe officia, temporibus odio suscipit magnam animi natus totam deleniti accusantium dignissimos pariatur maiores facere necessitatibus, vel minus nisi quod cupiditate.
