--- a/src/pug/templates/template.pug
+++ b/src/pug/templates/template.pug
@@ -3,7 +3,12 @@ html(lang="es")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Esta es un página de prueba
+        block head
+            include ../blocks/head
     body
+        block nav
+            include ../blocks/nav
         block content
+        block footer
+            include ../blocks/footer
         
