se añadio secciones al index, como los servicios en formato pequeño, tambien se ñadio el video en el header y textos, se añadio el sector de descripcion de la empresa

--- a/src/pug/blocks/footer.pug
+++ b/src/pug/blocks/footer.pug
@@ -2,8 +2,11 @@ footer
     .container
         .row
             .col-4
-                img(src="./media/constructora-community.jpeg", alt="")
-                include ../blocks/social
+                //- img(src="./media/community-black-and-white.png", alt="")
+                h3 Contactanos tambien por:
+                .hr
+                p
+                    include ../blocks/social
             .col-4
                 h3 Información
                 .hr
