--- a/src/pug/blocks/nav.pug
+++ b/src/pug/blocks/nav.pug
@@ -3,7 +3,7 @@ nav.pt-1
         .row
             .col-2
                 a(href="")
-                    img(src="./media/constructora-community.jpeg", alt="", srcset="")
+                    img(src="./media/constructora-community-logo.jpeg", alt="", srcset="").show
             .col-10
                 ul
                     li  
