--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,13 +1,62 @@
 extends ../templates/template
 
 block content
+    include ../blocks/header
+    .title
+        .container
+            h2 ¿Buscas un servicio de calidad?
     .container
         .row
+            section.col-12.pb-8.pt-8
+                .cards
+                    .card
+                        .card-title
+                            h4 Lorem, ipsum.
+                        .card-description
+                            p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro ipsum, maiores ipsa doloribus quas fuga.
+                    .card
+                        .card-title
+                            h4 Lorem, ipsum.
+                        .card-description
+                            p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro ipsum, maiores ipsa doloribus quas fuga.
+                    .card
+                        .card-title
+                            h4 Lorem, ipsum.
+                        .card-description
+                            p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro ipsum, maiores ipsa doloribus quas fuga.
+                    .card
+                        .card-title
+                            h4 Lorem, ipsum.
+                        .card-description
+                            p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro ipsum, maiores ipsa doloribus quas fuga.
+    section.section.dark
+        .container
+            .row
+                .col-6
+                    .subtitle
+                        h2 La Empresa
+                    .hr
+                    .description
+                        p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero ipsa optio aperiam obcaecati, itaque blanditiis. Magni dolor temporibus blanditiis sunt quia libero ut hic explicabo quisquam eaque laborum id quas voluptatibus sit earum rem quam vero nesciunt natus modi quasi, tempore omnis molestias porro. Repellendus magnam sapiente enim a dolorum.
+                        p Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque facere blanditiis optio cumque a minus ratione quod eaque sint et provident, sed labore fuga soluta maiores neque cum consectetur accusamus perspiciatis consequatur placeat? Facere, suscipit pariatur! Corrupti pariatur aperiam voluptates quas. Consequuntur optio laboriosam dolorum hic aliquid praesentium perferendis magnam?
+                        p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, minus natus eius assumenda nesciunt earum suscipit enim? Ab, sit iure.
+                    .block-btn
+                        a(href="#").btn.btn-primary Contactar
+                .col-6
+                    img(src="./media/constructora-community.png", alt="")
+    .container.section
+        .row
             .col-12
-                .title
-                    h1 Lorem, ipsum.
-                img(src="./media/constructora-community.jpeg", alt="", srcset="")
                 .subtitle
-                    h2 Lorem, ipsum dolor.
+                    h2 Algunos de nuestros clientes
+                .clients
+                    img(src="./media/gamlp.jpg", alt="", srcset="")
+                    img(src="./media/gamlp.jpg", alt="", srcset="")
+                    img(src="./media/gamlp.jpg", alt="", srcset="")
+                    img(src="./media/gamlp.jpg", alt="", srcset="")
+                    img(src="./media/gamlp.jpg", alt="", srcset="")
+                    img(src="./media/gamlp.jpg", alt="", srcset="")
+                    img(src="./media/gamlp.jpg", alt="", srcset="")
+                    img(src="./media/gamlp.jpg", alt="", srcset="")
+                    
                 
-                p Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, saepe officia, temporibus odio suscipit magnam animi natus totam deleniti accusantium dignissimos pariatur maiores facere necessitatibus, vel minus nisi quod cupiditate.
