--- a/src/sass/includes/blocks/_social.scss
+++ b/src/sass/includes/blocks/_social.scss
@@ -5,6 +5,7 @@
             display: inline-block;
             a{
                 text-decoration: none;
+                padding-right: $space;
             }
         }
     }
