--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,8 +5,14 @@
 @import "includes/general";
 @import "includes/text";
 @import "includes/padding_margin";
+@import "includes/colors";
+@import "includes/buttons";
+@import "includes/animation";
 
 // BLOCKS
 @import "includes/blocks/nav";
 @import "includes/blocks/footer";
 @import "includes/blocks/social";
+@import "includes/blocks/cards";
+@import "includes/blocks/clients";
+@import "includes/blocks/header";
