--- a/src/sass/includes/_general.scss
+++ b/src/sass/includes/_general.scss
@@ -18,3 +18,7 @@ img{
     background-color: $primary-hover;
     filter: opacity(.3);
 }
+.section{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
