--- a/src/sass/includes/blocks/_footer.scss
+++ b/src/sass/includes/blocks/_footer.scss
@@ -14,7 +14,7 @@ footer{
     background-color: $secondary;
     padding-top: 40px;
     padding-bottom: 40px;
-    p{
-        color:$secondary-hover;
+    p,span{
+        color:$secondary-hover !important;
     }
 }
