--- a/src/sass/includes/mixins/_shadows.scss
+++ b/src/sass/includes/mixins/_shadows.scss
@@ -1,3 +1,8 @@
 @mixin shadow_bottom {
     box-shadow:  1px 4px 0 rgba(0,0,0,.1);
 }
+@mixin shadow_btn {
+-webkit-box-shadow: 3px 4px 5px 1px rgba(0,0,0,0.07);
+-moz-box-shadow: 3px 4px 5px 1px rgba(0,0,0,0.07);
+box-shadow: 3px 4px 5px 1px rgba(0,0,0,0.07);
+}
