se añadio la carpeta media con 780px y se configuro en navegador para moviles

--- a/src/pug/blocks/nav.pug
+++ b/src/pug/blocks/nav.pug
@@ -1,10 +1,11 @@
-nav.pt-1
+.icon-menu#btn-menu
+nav.pt-1#nav-primary
     .container
         .row
-            .col-2
+            .col-2#brand
                 a(href="")
                     img(src="./media/constructora-community-logo.jpeg", alt="", srcset="").show
-            .col-10
+            .col-10#nav
                 ul
                     li  
                         a(href="#") Inicio
