--- a/src/sass/includes/blocks/_header.scss
+++ b/src/sass/includes/blocks/_header.scss
@@ -2,6 +2,7 @@
     width: 100%;
     position: relative;
     overflow: hidden;
+    margin-top: 117px;
     .transparencia{
         background-color: $secondary-hover;
         opacity: .6;
