--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -16,3 +16,6 @@
 @import "includes/blocks/cards";
 @import "includes/blocks/clients";
 @import "includes/blocks/header";
+
+/* MEDIA SCREENS */
+@import "includes/media/780";
