--- a/src/sass/includes/mixins/_shadows.scss
+++ b/src/sass/includes/mixins/_shadows.scss
@@ -6,3 +6,8 @@
 -moz-box-shadow: 3px 4px 5px 1px rgba(0,0,0,0.07);
 box-shadow: 3px 4px 5px 1px rgba(0,0,0,0.07);
 }
+@mixin shadow {
+-webkit-box-shadow: 4px 4px 8px -2px rgba(0,0,0,0.55);
+-moz-box-shadow: 4px 4px 8px -2px rgba(0,0,0,0.55);
+box-shadow: 4px 4px 8px -2px rgba(0,0,0,0.55);
+}
