Se crearon los templates y se generaron la paginas para la pagina web

--- a/src/pug/blocks/nav.pug
+++ b/src/pug/blocks/nav.pug
@@ -8,10 +8,10 @@ nav.pt-1#nav-primary
             .col-10#nav
                 ul
                     li  
-                        a(href="#") Inicio
+                        a(href="./") Inicio
                     li
-                        a(href="#") Empresa
+                        a(href="Nosotros.html") Nosotros
                     li
-                        a(href="#") Servicios
+                        a(href="Servicios.html") Servicios
                     li
-                        a(href="#") Contacto
+                        a(href="Contacto.html") Contacto
